--- a/static/css/hero.css
+++ b/static/css/hero.css
@@ -3,6 +3,10 @@
     z-index: -1;
 }
 
+#hero-header-spacer {
+    height: 7.3rem;
+}
+
 #hero-video-home, #hero-image-home {
     object-fit: cover;
     width: 100vw;
@@ -12,11 +16,14 @@
 #hero-image-page {
     object-fit: cover;
     width: 100vw;
-    height: 12rem;
+    height: 16rem;
 }
 
 #hero-header-home, #hero-header-page {
     filter: drop-shadow(0 0 0.1rem rgba(0, 0, 0, 0.8));
+}
+
+#hero-header-home {
     padding: 1rem;
 }
 
@@ -29,7 +36,6 @@
 #hero-header-page {
     margin: auto;
     position: relative;
-    top: 6rem;
 }
 
 #hero-title-home, #hero-title-page {
@@ -51,5 +57,5 @@
 }
 
 #hero-spacer-page {
-    height: 8rem;
+    height: 3rem;
 }
