--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -1,5 +1,5 @@
 .nav-spacer {
-    margin-top: 6rem;
+    margin-top: 5.7rem;
 }
 
 #nav {
